FIX: Fixed Favourite Char box overflow

--- a/apps/frontend/src/components/common/CharacterFavorite/CharacterCard.css
+++ b/apps/frontend/src/components/common/CharacterFavorite/CharacterCard.css
@@ -1,5 +1,5 @@
 .character-card {
-  max-width: 100%;      
+  /* max-width: 100%;       */
   border: 0.15rem solid #cccccc; 
   border-radius: 8px;
   padding: 12px;
