--- a/apps/frontend/src/components/common/menu-box/MenuBox.css
+++ b/apps/frontend/src/components/common/menu-box/MenuBox.css
@@ -24,5 +24,5 @@
 }
 
 .MenuBox div {
-  width: 100%;
+  width: 95%;
 }
